got basic data to show but need more

--- a/backindex.html
+++ b/backindex.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cars Cars Cars</title>
-    <link rel="stylesheet" href="/mainstyle.css">
-    <link rel="stylesheet" href="products.css">
+    <title>Choose Your Ride</title>
+    <link rel="stylesheet" href="./src/mainstyle.css">
+    <link rel="stylesheet" href="./src/products.css">
 </head>
 <body>
     <header>
         <h1>Cody's Car Lab</h1>
         <nav>
             <a href="frontindex.html">Home</a>
-            <a href="products">Choose It</a>
         </nav>
     </header>
-
+    
     <main>
-        <h2>Cars</h2>
+        <h2>Choose From a Ride Below</h2>
         <ul id="cars"></ul>
+        <a href="products">Now Lets Roll</a>
     </main>
 
     <script src="./src/products.js" type="module"></script>
