all code works and ready for next step

--- a/frontindex.html
+++ b/frontindex.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <header>
-        <h1>Cody's Car Lab</h1>
+        <h1>Cody's Realistic RC Car Lab</h1>
     </header>
     
     <main>
+        <h3>...Best RC Cars for the Best Price...</h3>
         <section class="centered">
-            <p>
-                <img src="https://i.pinimg.com/originals/3e/36/06/3e360693a143f0d1493bedca0550e565.jpg">
-            </p>
+            <img src="https://i.pinimg.com/originals/3e/36/06/3e360693a143f0d1493bedca0550e565.jpg">
             <p>
                 <a href="backindex.html">Choose Your Ride</a>
             </p>
