--- a/backindex.html
+++ b/backindex.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Choose Your Ride</title>
-    <link rel="stylesheet" href="./src/mainstyle.css">
     <link rel="stylesheet" href="./src/products.css">
 </head>
 <body>
     <header>
-        <h1>Cody's Car Lab</h1>
+        <h1>Cody's Realistic RC Car Lab</h1>
         <nav>
             <a href="frontindex.html">Home</a>
+            <!-- <a href="products">Now Lets Roll</a> -->
         </nav>
     </header>
     
     <main>
         <h2>Choose From a Ride Below</h2>
-        <ul id="cars"></ul>
-        <a href="products">Now Lets Roll</a>
+        <ul id="cars">
+        </ul>
     </main>
 
     <script src="./src/products.js" type="module"></script>
