--- a/backindex.html
+++ b/backindex.html
@@ -12,12 +12,13 @@
         <h1>Cody's Realistic RC Car Lab</h1>
         <nav>
             <a href="frontindex.html">Home</a>
-            <!-- <a href="products">Now Lets Roll</a> -->
+            <br></br>
         </nav>
+            <a href="products">Checkout</a>
     </header>
     
     <main>
-        <h2>Choose From a Ride Below</h2>
+        <h2>Choose Your Ride Below</h2>
         <ul id="cars">
         </ul>
     </main>
