--- a/frontindex.html
+++ b/frontindex.html
@@ -14,7 +14,7 @@
     </header>
     
     <main>
-        <h3>...Best RC Cars for the Best Price...</h3>
+        <h3>...The Best RC Cars for the Best Price...</h3>
         <section class="centered">
             <img src="https://i.pinimg.com/originals/3e/36/06/3e360693a143f0d1493bedca0550e565.jpg">
             <p>
