added table i think will work

--- a/frontpageindex.html
+++ b/frontpageindex.html
@@ -18,7 +18,7 @@
         <section class="centered">
             <img src="https://i.pinimg.com/originals/3e/36/06/3e360693a143f0d1493bedca0550e565.jpg">
             <p>
-                <a href="backindex.html">Choose Your Ride</a>
+                <a href="shoppingindex.html">Choose Your Ride</a>
             </p>
         </section>
     </main>
