--- a/shoppingindex.html
+++ b/shoppingindex.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Cody's Realistic RC Car Lab</h1>
         <nav>
-            <a href="frontindex.html">Home</a>
+            <a href="frontpageindex.html">Home</a>
             <br></br>
         </nav>
-            <a href="products">Checkout</a>
+            <a href="cartindex.html">Checkout</a>
     </header>
     
     <main>
