added shopping cart page and some tests

--- a/frontpageindex.html
+++ b/frontpageindex.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./src/mainstyle.css">
+    <link rel="stylesheet" href="./mainstyle.css">
     <title>Cody's Car Lab</title>
 </head>
 <body>
@@ -18,11 +18,11 @@
         <section class="centered">
             <img src="https://i.pinimg.com/originals/3e/36/06/3e360693a143f0d1493bedca0550e565.jpg">
             <p>
-                <a href="shoppingindex.html">Choose Your Ride</a>
+                <a href="./products/carspageindex.html">Choose Your Ride</a>
             </p>
         </section>
     </main>
 
-    <script src="./src/data/cars.js" type="module"></script>
+    <script src="./data/cars.js" type="module"></script>
 </body>
 </html>
