--- a/products/carspageindex.html
+++ b/products/carspageindex.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Choose Your Ride</title>
-    <link rel="stylesheet" href="./src/products.css">
+    <link rel="stylesheet" href="./products.css">
 </head>
 <body>
     <header>
         <h1>Cody's Realistic RC Car Lab</h1>
         <nav>
-            <a href="frontpageindex.html">Home</a>
+            <a href="../frontpageindex.html">Home</a>
             <br></br>
         </nav>
-            <a href="cartindex.html">Checkout</a>
+            <a href="../shoppingcart/shoppingcartindex.html">Checkout</a>
     </header>
     
     <main>
@@ -23,6 +23,6 @@
         </ul>
     </main>
 
-    <script src="./src/products.js" type="module"></script>
+    <script src="products.js" type="module"></script>
 </body>
 </html>
