--- a/shoppingcart/shoppingcartindex.html
+++ b/shoppingcart/shoppingcartindex.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Realistic RC Car Shopping Cart</h1>
         <nav>
-            <a href="frontpageindex.html">Home</a>
+            <a href="../frontpageindex.html">Home</a>
             <br></br>
         </nav>
-        <a href="shoppingindex.html">Get More Cars</a>
+        <a href="../products/carspageindex.html">Get More Cars</a>
     </header>
 
     <main>
@@ -45,6 +45,6 @@
         </p>
     </main>
 
-    <script type="module" src="cart.js"></script>
+    <script type="module" src="./shoppingcart.js"></script>
 </body>
 </html>
